Fix MALLOC_ABI_ALIGNMENT for arm

2013-08-08  Bernd Edlinger  <bernd.edlinger@hotmail.de>

 	PR target/58065
 	* config/arm/arm.h (MALLOC_ABI_ALIGNMENT): New,




git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@201589 138bc75d-0d04-0410-961f-82ee72b054a4